--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,27 +2,27 @@ name = "pastebin-worker"
 compatibility_date = "2023-10-30"
 compatibility_flags = ["nodejs_compat"]
 
-account_id = "516d0a360ccdea88dd79e9cf5d2bc3aa"
+account_id = "70cb9c603de6dbdde25a3dcb02f7725c"
 main = "src/index.ts"
 workers_dev = false
 
 [vars]
 ENVIRONMENT = "production"
-BASE_URL = "https://as.al"
+BASE_URL = "https://paste.viento.cc"
 
 [site]
 bucket = "./static/dist"
 
 # 如果不使用自定义域名，将下面的代码注释掉
 [[routes]]
-pattern = "as.al"
+pattern = "paste.viento.cc"
 custom_domain = true
 
 [[r2_buckets]]
 binding = 'BUCKET'
-bucket_name = 'pastes'
+bucket_name = 'pastebins'
 
 [[d1_databases]]
 binding = "DB"
 database_name = "pastebins"
-database_id = "e7d77803-c383-45c8-9481-c1630aa43bca"
+database_id = "25f38669-48b7-46d4-9ce1-3bd9c9d25d2e"
